# partdist

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-05-momentum-as-base-storage.md
docs/superpowers/specs/: 2026-04-05-momentum-as-base-storage-design.md
src/partdist/: __init__.py  _array_helpers.py  kinematics.py  particle_array_quantity.py  profiles_1d.py
src/partdist/pd3d/: __init__.py  analysis.py  core.py  io.py  manipulator.py  utils.py  viz.py
src/partdist/pdslice/: __init__.py  analysis.py  core.py  generator.py  io.py  viz.py  (+1 more)
tests/: check_genesis_units.py  diagnose_current.py  explore_genesis_h5.py  prototype_genesis_read.py  test_analysis.py  test_analyze_longitudinal_trend_dataclass.py  test_array_helpers.py  test_chirp_fit.py  test_core3d.py  test_decomp_energy.py  test_extract_core.py  test_extract_core_ellipse.py  test_fit_current_profile_guards.py  test_genesis_io.py  test_genesis_roundtrip.py  test_genesis_unit_attr.py  test_genesis_z_calculation.py  test_io3d.py  test_manip3d.py  test_manipulator_functions.py  test_match_twiss.py  test_momentum_evc_copy.py  test_nemit_consistency.py  test_pd3d_beam_diagnostics_linearity.py  test_pd3d_chirp_cache.py  test_pd3d_emit_z.py  test_pd3d_from_arrays_keyword_only.py  test_pd3d_nemit_reference.py  test_pd3d_velocity_cache.py  test_pd3d_xp_convention.py  test_pdslice_generator.py  test_pdslice_manipulator.py  test_pdslice_velocity_cache.py  test_pdslice_viz.py  test_pdslice_xp_convention.py  test_to_ocelot_guard.py  test_viz3d.py  test_viz_for_manipulator.py  verify_genesis_read.py
